--- a/env/gpu/Project.toml
+++ b/env/gpu/Project.toml
@@ -1,5 +1,7 @@
 [deps]
 Atmo = "9119886c-ffd7-11e8-08c3-e1f5e1b10203"
+CUDAdrv = "c5f51814-7f29-56b8-a69c-e4d8f6be1fde"
+CUDAnative = "be33ccc6-a3ff-5ff2-a52e-74243cff1e17"
 Canary = "f104530e-ab06-11e8-1c1e-6d6e4a5d5c91"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 Utils = "7f913980-ffd7-11e8-3449-f5d197202f6f"
