--- a/src/Atmo/Project.toml
+++ b/src/Atmo/Project.toml
@@ -1,6 +1,10 @@
+name = "Atmo"
+uuid = "9119886c-ffd7-11e8-08c3-e1f5e1b10203"
+authors = ["Lucas C Wilcox <lucas@swirlee.com>", "Jeremy E Kozdon <jekozdon@nps.edu>"]
+
 [deps]
-Atmo = "9119886c-ffd7-11e8-08c3-e1f5e1b10203"
 Canary = "f104530e-ab06-11e8-1c1e-6d6e4a5d5c91"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Utils = "7f913980-ffd7-11e8-3449-f5d197202f6f"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
